# NewYorkCivics

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TODO.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_quality.yml  feature_request.yml
.github/workflows/: ci.yml  evals.yml
ingest/: __init__.py  config.py  observability.py
ingest/deliver/: __init__.py  digest.py  match.py  rank.py  review.py  send.py  subscribers.py
ingest/eval/: __init__.py  geocode_eval.py  promptfoo.yaml  tasks.py
ingest/eval/fixtures/: geocode_addresses.csv
ingest/eval/golden/: README.md  _sample_label.json  cb-bk01-2024-04-30-item-3.json  cb-bk06-2024-05-01-item-5.json  cb-bx09-2024-03-18-item-4.json  cb-mn03-2024-05-14-item-1.json  cb-mn05-2024-03-20-item-2.json  cb-mn07-2024-04-08-item-1.json  cb-mn11-2024-04-15-item-3.json  cb-mn11-2024-06-10-item-1.json  cb-qn07-2024-04-22-item-2.json  cb-si01-2024-05-06-item-2.json
ingest/extract/: __init__.py  extractor.py  schemas.py  ulurp_codes.py
ingest/extract/prompts/: README.md  cb_agenda.v1.md
ingest/normalize/: __init__.py  geocode.py  zoning.py
ingest/parse/: __init__.py  pdf_route.py  pdf_text.py  pdf_vision.py
ingest/sources/: __init__.py
ingest/sources/nyc/: __init__.py  building_grades.py  cb_agenda.py  citations.py  corroborate.py  dob_hpd.py  harlem_digest.py  legistar.py  permitted_events.py  service_requests.py  ulurp_packet.py  (+1 more)
ingest/store/: __init__.py  db.py  schema.sql
ingest/tests/: __init__.py  test_building_grades.py  test_cb_agenda.py  test_corroborate.py  test_deliver_digest.py  test_digest_render.py  test_dob_hpd.py  test_dob_now.py  test_extractor.py  test_harlem_digest_cb_agenda.py  test_harlem_digest_ulurp.py  test_harlem_digest_zap_legistar.py  test_legistar.py  test_permitted_events.py  test_review.py  test_send.py  test_service_requests.py  test_smoke.py  test_subscribers.py  test_ulurp_packet.py  test_zap_api.py  test_zap_ulurp.py
(+4 files in other folders)
